--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/svg" href="/images/favicon.jpg">
+    <link rel="icon" type="image/svg" href="/images/favicon.jpg" />
     <title>Marshall@Home &mdash; Login</title>
 
     <!--CSS-->
@@ -12,6 +12,10 @@
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
   </head>
   <body class="login-page">
@@ -25,10 +29,16 @@
             <div class="card fat">
               <div class="card-body">
                 <h4 class="card-title">Login</h4>
-                <form id = "form" method="" class="login-validation" novalidate="">
+                <form
+                  id="form"
+                  method=""
+                  class="login-validation"
+                  novalidate=""
+                >
                   <div class="form-group">
                     <label for="email">E-Mail Address</label>
                     <input
+                      placeholder="imthebest@gmail.com"
                       id="email"
                       type="email"
                       class="form-control"
@@ -36,7 +46,10 @@
                       value=""
                       required
                       autofocus
+                      minlength="8"
                     />
+                    <i class="bi bi-check-circle-fill"></i>
+                    <i class="bi bi-exclamation-circle-fill"></i>
                     <small>Error Message</small>
                     <div class="invalid-feedback">Email is invalid</div>
                   </div>
@@ -49,6 +62,7 @@
                       </a>
                     </label>
                     <input
+                      placeholder="wifi@sp96sucks"
                       id="password"
                       type="password"
                       class="form-control"
@@ -56,6 +70,8 @@
                       required
                       data-eye
                     />
+                    <i class="bi bi-check-circle-fill"></i>
+                    <i class="bi bi-exclamation-circle-fill"></i>
                     <small>Error Message</small>
                     <div class="invalid-feedback">Password is required</div>
                   </div>
@@ -103,8 +119,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="/scripts/login.js"></script>
-    <script src="/scripts/validation.js"></script>
+    <script src="/scripts/validation-login.js"></script>
     <!-- <script src="/scripts/login-validation.js"></script> -->
     <script src="/scripts/signinlogic.js"></script>
+    <script>
+      checkValues();
+    </script>
   </body>
 </html>
