--- a/register.html
+++ b/register.html
@@ -1,97 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg" href="/images/favicon.jpg" />
+    <title>Marshall@Home &mdash; Register</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/svg" href="/images/favicon.jpg">
-  <title>Marshall@Home &mdash; Register</title>
+    <!--CSS-->
+    <link rel="stylesheet" type="text/css" href="css/login.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+  </head>
 
-  <!--CSS-->
-  <link rel="stylesheet" type="text/css" href="css/login.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-</head>
+  <body class="login-page">
+    <section class="h-100">
+      <div class="container h-100">
+        <div class="row justify-content-center align-items-center h-100">
+          <div class="card-wrapper">
+            <div class="logo">
+              <img src="images/logo.png" alt="logo" />
+            </div>
+            <div class="card fat">
+              <div class="card-body">
+                <h4 class="card-title">Register</h4>
+                <form class="login-validation" novalidate="" id="form">
+                  <div class="form-group">
+                    <label for="name">Name</label>
+                    <input
+                      id="name"
+                      type="text"
+                      class="form-control"
+                      name="name"
+                      required
+                      autofocus
+                    />
+                    <i class="bi bi-check-circle-fill"></i>
+                    <i class="bi bi-exclamation-circle-fill"></i>
+                    <small>Error Message</small>
+                  </div>
 
-<body class="login-page">
-  <section class="h-100">
-    <div class="container h-100">
-      <div class="row justify-content-center align-items-center h-100">
-        <div class="card-wrapper">
-          <div class="logo">
-            <img src="images/logo.png" alt="logo" />
-          </div>
-          <div class="card fat">
-            <div class="card-body">
-              <h4 class="card-title">Register</h4>
-              <form class="login-validation" novalidate="">
-                <div class="form-group">
-                  <label for="name">Name</label>
-                  <input id="name" type="text" class="form-control" name="name" required autofocus />
-                  <div class="invalid-feedback">What's your name?</div>
-                </div>
+                  <div class="form-group">
+                    <label for="email">E-Mail Address</label>
+                    <input
+                      id="email"
+                      type="email"
+                      class="form-control"
+                      name="email"
+                      required
+                    />
+                    <i class="bi bi-check-circle-fill"></i>
+                    <i class="bi bi-exclamation-circle-fill"></i>
+                    <small>Error Message</small>
+                  </div>
 
-                <div class="form-group">
-                  <label for="email">E-Mail Address</label>
-                  <input id="email" type="email" class="form-control" name="email" required />
-                  <div class="invalid-feedback">Your email is invalid</div>
-                </div>
+                  <div class="form-group">
+                    <label for="password">Password</label>
+                    <input
+                      id="password"
+                      type="password"
+                      class="form-control"
+                      name="password"
+                      required
+                      data-eye
+                    />
+                    <i class="bi bi-check-circle-fill"></i>
+                    <i class="bi bi-exclamation-circle-fill"></i>
+                    <small>Error Message</small>
+                  </div>
 
-                <div class="form-group">
-                  <label for="password">Password</label>
-                  <input id="password" type="password" class="form-control" name="password" required data-eye />
-                  <div class="invalid-feedback">Password is required</div>
-                </div>
-
-                <div class="form-group">
-                  <label for="userType">I am a...</label>
-                  <div class="btn-group btn-group-toggle w-100" data-toggle="buttons">
-                  <label class="btn btn-secondary active">
-                    <input type="radio" name="Student" id="student" autocomplete="off" checked> Student
-                  </label>
-                  <label class="btn btn-secondary">
-                    <input type="radio" name="Lecturer" id="lecturer" autocomplete="off"> Lecturer
-                  </label>
-                </div>
-                </div>
-
-                <div class="form-group">
-                  <div class="custom-checkbox custom-control">
-                    <input type="checkbox" name="agree" id="agree" class="custom-control-input" required="" />
-                    <label for="agree" class="custom-control-label">I agree to the
-                      <a href="#">Terms and Conditions</a></label>
-                    <div class="invalid-feedback">
-                      You must agree with our Terms and Conditions
+                  <div class="form-group">
+                    <label for="userType">I am a...</label>
+                    <div
+                      class="btn-group btn-group-toggle w-100"
+                      data-toggle="buttons"
+                    >
+                      <label class="btn btn-secondary active">
+                        <input
+                          type="radio"
+                          name="Student"
+                          id="student"
+                          autocomplete="off"
+                          checked
+                        />
+                        Student
+                      </label>
+                      <label class="btn btn-secondary">
+                        <input
+                          type="radio"
+                          name="Lecturer"
+                          id="lecturer"
+                          autocomplete="off"
+                        />
+                        Lecturer
+                      </label>
                     </div>
                   </div>
-                </div>
 
-                <div class="form-group m-0">
-                  <button class="btn btn-block" onclick="registerAccount()">
-                    Register
-                  </button>
-                </div>
-                <div class="mt-4 text-center">
-                  Already have an account? <a href="index.html">Login</a>
-                </div>
-              </form>
+                  <div class="form-group">
+                    <div class="custom-checkbox custom-control">
+                      <input
+                        type="checkbox"
+                        name="agree"
+                        id="agree"
+                        class="custom-control-input"
+                        required=""
+                      />
+                      <label for="agree" class="custom-control-label"
+                        >I agree to the
+                        <a href="#">Terms and Conditions</a></label
+                      >
+                      <div class="invalid-feedback">
+                        You must agree with our Terms and Conditions
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group m-0">
+                    <button class="btn btn-block" onclick="registerAccount()">
+                      Register
+                    </button>
+                  </div>
+                  <div class="mt-4 text-center">
+                    Already have an account? <a href="index.html">Login</a>
+                  </div>
+                </form>
+              </div>
             </div>
-          </div>
-          <div class="footer">
-            Copyright &copy; 2021 &mdash; Marshalling@Home
+            <div class="footer">
+              Copyright &copy; 2021 &mdash; Marshalling@Home
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!--Scripts-->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="/scripts/login.js"></script>
-  <script src="/scripts/login-validation.js"></script>
-  <script src="/scripts/signinlogic.js"></script>
-</body>
-
+    <!--Scripts-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="/scripts/login.js"></script>
+    <script src="/scripts/validation-register.js"></script>
+    <script src="/scripts/signinlogic.js"></script>
+    <script>
+      checkValues();
+    </script>
+  </body>
 </html>
